--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
 
     {% include footer.html %}
     {% include backToTop.html %}
-    <script src="{{ " /wiki/js/main.js " | prepend: site.baseurl }}" charset="utf-8"></script>
-    <script src="{{ " /wiki/js/smooth-scroll.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
+    <script src="{{ "/js/main.js " | prepend: site.baseurl }}" charset="utf-8"></script>
+    <script src="{{ "/js/smooth-scroll.min.js " | prepend: site.baseurl }}" charset="utf-8"></script>
     <script type="text/javascript">
       smoothScroll.init({
         speed: 500, // Integer. How fast to complete the scroll in milliseconds
